# Crayfish-Engine

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.bat  crayfish_engine.cpp
src/: ce_device.cpp  ce_device.hpp  ce_model.cpp  ce_model.hpp  ce_pipeline.cpp  ce_pipeline.hpp  ce_swap_chain.cpp  ce_swap_chain.hpp  ce_window.cpp  ce_window.hpp  cegdk.cpp  cegdk.hpp
src/shaders/: simple.frag  simple.vert
